tests/core/negative/types/return_bool_as_i64.vais
fn main() -> i64 {
    return true
}
